err/dhkit.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dhkit'...
Compiling './lib/python3.5/site-packages/dhkit/database.py'...
***   File "./lib/python3.5/site-packages/dhkit/database.py", line 190
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dhkit/fields.py'...
***   File "./lib/python3.5/site-packages/dhkit/fields.py", line 53
    except dhkit.validators.ValidationError, e:
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dhkit/oauth.py'...
***   File "./lib/python3.5/site-packages/dhkit/oauth.py", line 268
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dhkit/protorpc.py'...
***   File "./lib/python3.5/site-packages/dhkit/protorpc.py", line 247
    except Error, e:
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dhkit/rest.py'...
***   File "./lib/python3.5/site-packages/dhkit/rest.py", line 80
    except dhkit.fields.ArgumentError, e:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dhkit/sms.py'...
***   File "./lib/python3.5/site-packages/dhkit/sms.py", line 139
    except HTTPError, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dhkit/threadpool.py'...
***   File "./lib/python3.5/site-packages/dhkit/threadpool.py", line 74
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dhkit/webapi.py'...
***   File "./lib/python3.5/site-packages/dhkit/webapi.py", line 71
    except HTTPError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dhkit-1.0.26.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
